force-app/main/default/objects/Journal__c/Journal__c.object-meta.xml
<CustomObject>
    <label>Journal</label>
    <nameField>
        <displayFormat>JNL-{0000}</displayFormat>
        <label>Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>