force-app/main/default/objects/Journal__c/fields/Journal_Date__c.field-meta.xml
<CustomField>
    <fullName>Journal_Date__c</fullName>
    <label>Journal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>