force-app/main/default/objects/Journal__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.OpportunityId</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Journals</relationshipLabel>
    <relationshipName>Journals</relationshipName>
    <type>Lookup</type>
</CustomField>