force-app/main/default/objects/Journal__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <label>Total Credit</label>
    <summarizedField>Journal_Line__c.Credit__c</summarizedField>
    <summaryForeignKey>Journal_Line__c.Journal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>