force-app/main/default/objects/Journal__c/fields/Total_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit__c</fullName>
    <label>Total Debit</label>
    <summarizedField>Journal_Line__c.Debit__c</summarizedField>
    <summaryForeignKey>Journal_Line__c.Journal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>