force-app/main/default/objects/Journal__c/validationRules/Debit_Must_Equal_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>Debit_Must_Equal_Credit</fullName>
    <active>true</active>
    <description>Journal cannot be saved: Total Debit must equal Total Credit.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Posted&quot;),
Total_Debit__c &lt;&gt; Total_Credit__c
)</errorConditionFormula>
    <errorMessage>Journal cannot be posted. Debit and Credit must be equal and greater than zero.</errorMessage>
</ValidationRule>