force-app/main/default/objects/Journal__c/validationRules/Lock_Posted_Journal.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Posted_Journal</fullName>
    <active>true</active>
    <description>Posted Journals cannot be edited.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Posted&quot;), Is_Locked__c = TRUE)</errorConditionFormula>
    <errorMessage>Posted Journals cannot be edited.</errorMessage>
</ValidationRule>